--- a/frontend/securegpt/src/App.css
+++ b/frontend/securegpt/src/App.css
@@ -130,6 +130,34 @@ body {
   flex-grow: 1;
 }
 
+.textstuff {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+}
+ 
+
+.textbox {
+  width:80%;
+  height: 80%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #333;
+  color: white;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.textbox::placeholder {
+  color: #aaa;
+}
+
 .logo-center {
   margin-bottom: 40px;
 }
